<resources>
    <string name="app_name">Imma App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="default_notification_channel_id" translatable="false">imma_default_channel</string>
    <string name="default_notification_channel_name" translatable="false">IMMA</string>

    <string name="notif_message">Permintaan RAB baru dari %1$s</string>


    <!--  Khusus untuk valued String  -->
    <string name="anggaran_po">Rp. %1$s</string>
    <string name="num_item">Item Num: %1$s</string>
    <string name="deskripsi_item">Deskripsi: %1$s</string>
    <string name="satuan_item">Satuan: %1$s</string>
    <!--  End of valued String  -->


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="login">Login</string>
    <string name="untuk_memulai">untuk memulai</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="lupa_password">Lupa Password ?</string>
    <string name="dummy_nama">Halo, Ahmad Toni</string>
    <string name="dummy_role">Inventory</string>
    <string name="layanan">Layanan</string>
    <string name="purchase_order">Purchase Order</string>
    <string name="stock_opname">Stock Opname</string>
    <string name="permintaan_barang">Permintaan Barang</string>
    <string name="dummy_kode_permintaan">PB0000000001</string>
    <string name="_14_oktober_2021">14 Oktober 2021</string>
    <string name="tanggal_permohonan">Tanggal Permohonan</string>
    <string name="tanggal_dibutuhkan">Tanggal Dibutuhkan</string>
    <string name="_28_05_2021">28-05-2021</string>
    <string name="judul_pekerjaan">Judul Pekerjaan</string>
    <string name="nama_pemohon">Nama Pemohon</string>
    <string name="dummy_judul_pekerjaan">Asesmen Unit</string>
    <string name="dummy_nama_pemohon">Wisnu Dwi Yanto</string>
    <string name="usulan_pengadaan">Usulan Pengadaan....</string>
    <string name="total_anggaran">Total Anggaran</string>
    <string name="rp_3_445_000">Rp.3.445.000</string>
    <string name="tanggal_order">Tanggal Order</string>
    <string name="nama_vendor">Nama Vendor</string>
    <string name="koperasi_sejahtera_kaltim_teluk">Koperasi Sejahtera Kaltim Teluk</string>
    <string name="usulan_pengadaan_tabung_oksigen_portabel">Usulan Pengadaan Tabung Oksigen Portabel</string>
    <string name="nomor_po">Nomor PO</string>
    <string name="dummy_no_po">169.SP/SOT/600/UJKT/2020</string>
    <string name="login_button">Login Button</string>
    <string name="dummy_po_gudang">FK0204.SP/OMG/600/UJKT/2020</string>
    <string name="daftar_usulan_permintaan_barang">Daftar Usulan Permintaan Barang</string>
    <string name="daftar_gudang">Daftar Permintaan Barang</string>
    <string name="belum_ada_permintaan_barang">Belum ada permintaan barang</string>
    <string name="ayo_tambah_permintaan_barang">Ayo tambah permintaan barang</string>
    <string name="daftar_purchase_order">Daftar Purchase Order</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="arahkan_qr_code_ke_kamera_anda_nuntuk_data_terbaca_otomatis">Arahkan QR Code ke kamera anda untuk data terbaca otomatis</string>
    <string name="scan_sekarang">Scan Sekarang</string>
    <string name="klik_disini_jika_mengecek_data_secara_manual">Klik disini jika mengecek data secara manual</string>
    <string name="detail_stok_opname">Detail Stok Opname</string>
    <string name="stok_opname">Stok Opname</string>
    <string name="data_opname">Data Opname</string>
    <string name="stok_nyata">Stok Nyata</string>
    <string name="kondisi_barang">Kondisi Barang</string>
    <string name="keterangan">Keterangan</string>
    <string name="keterangan_barang">Keterangan Barang</string>
    <string name="nomor_barang_1000001101">Nomor Barang : 1000001101</string>
    <string name="deskripsi_unit_mask_non_woven">Deskripsi Unit : MASK, NON WOVEN</string>
    <string name="satuan_unit_6">Satuan Unit : 6</string>
    <string name="contoh_stoknyata">Contoh : 1,2,3</string>
    <string name="contoh_kondisibarang">Contoh : Baik, Buruk, Rusak</string>
    <string name="nomor_barang">Nomor Barang</string>
    <string name="dummy_po">PENGADAAN LAMPU PORTABLE BIDANG ELEKTRIK</string>
    <string name="usulan_permintaan_barang">Usulan Permintaan Barang</string>
    <string name="levering">Levering</string>
    <string name="dummy_levering">2020-08-28</string>
    <string name="status_po">Status PO</string>
    <string name="complete">Complete</string>
    <string name="keterlambatan">Keterlambatan</string>
    <string name="dummy_keterlambatan">180 Hari</string>
    <string name="x1">x%1$s</string>
    <string name="dummy_item_usulan">4 IN 1 HUMIDITY, TEMPERATURE AIRFLOW AND LIGHT METER, 45170, POWER SUPPLY 9 VOLT, OPERATING CONDITION 0 TO 50 C, MPH 0.9 TO 67.0 MPH, KNOTS 0.8 TO 58.3 KNOTS, DISPLAY 4 DIGIT (9999 COUNT) DUAL DISPLAY LCD</string>
    <string name="detail_usulan_npermintaan_barang">Detail Usulan Permintaan Barang</string>
    <string name="tambah_material_upb">Tambah Material</string>
    <string name="detail_purchase_order">Detail Purchase Order</string>
    <string name="item_number">Item Number</string>
    <string name="data_tidak_ditemukan">Data tidak ditemukan</string>
    <string name="masukkan_tanggal_dibutuhkan">Masukkan tanggal dibutuhkan</string>
    <string name="deskripsi_pekerjaan">Deskripsi Pekerjaan</string>
    <string name="catatan">Catatan</string>
    <string name="criticality">Criticality</string>
    <string name="urgent">Urgent</string>
    <string name="normal">Normal</string>
    <string name="tor_kak">TOR/KAK</string>
    <string name="pilih_file">Pilih File</string>
    <string name="button_to_tambah">button_to_tambah</string>
    <string name="simpan">Simpan</string>
    <string name="konfirmasi">Konfirmasi</string>
    <string name="button_untuk_tambah_material">this button use for add new material</string>
    <string name="btn_for_back">btn for back</string>
    <string name="tambah_usulan_permintaan_barang">Tambah Usulan Permintaan Barang</string>
    <string name="nama_material">Nama Material</string>
    <string name="tambah_material">Tambah Material</string>
    <string name="current_balance">Current Balance</string>
    <string name="masukkan_nama_material">Masukkan nama material</string>
    <string name="jumlah">Jumlah</string>
    <string name="satuan">Satuan</string>
    <string name="spesifikasi">Spesifikasi</string>
    <string name="daftar_material">Daftar Material</string>
    <string name="services">Services</string>
    <string name="items">Items</string>
    <string name="baik">Baik</string>
    <string name="rusak">Rusak</string>
    <string name="baik_tapi_tidak_bisa_dipakai">Baik tapi tidak bisa dipakai</string>
    <string name="rusak_dan_tidak_bisa_diperbaiki">Rusak dan tidak bisa diperbaiki</string>
    <string name="tambah_supplier">Tambah Supplier</string>

    <string-array name="kondisi_barang">
        <item>@string/baik</item>
        <item>@string/rusak</item>
        <item>@string/baik_tapi_tidak_bisa_dipakai</item>
        <item>@string/rusak_dan_tidak_bisa_diperbaiki</item>
    </string-array>

    <string-array name="line_type">
        <item>@string/services</item>
        <item>@string/items</item>
    </string-array>

    <string-array name="approval_list">
        <item>@string/abdul_karim</item>
        <item>@string/ahmad_fachrisal</item>
        <item>@string/aco_iwan</item>
        <item>@string/adam_shofiyullah</item>
        <item>@string/ade_rahmat_riyanto</item>
        <item>@string/adi</item>
        <item>@string/adi_herlambang</item>
        <item>@string/adityamarwan</item>
        <item>@string/agi_setia_putera</item>
        <item>@string/wisnu_dwi_yanto</item>
    </string-array>

    <string-array name="supplier_name">
        <item>Pilih supplier</item>
    </string-array>

    <string name="abdul_karim" translatable="false">Abdul Karim</string>
    <string name="ahmad_fachrisal" translatable="false">Ahmad Fachrisal</string>
    <string name="aco_iwan" translatable="false">Aco Iwan</string>
    <string name="adam_shofiyullah" translatable="false">Adam Shofiyullah</string>
    <string name="ade_rahmat_riyanto" translatable="false">Ade Rahmat Riyanto</string>
    <string name="adi" translatable="false">Adi</string>
    <string name="adi_herlambang" translatable="false">Adi Herlambang</string>
    <string name="adityamarwan" translatable="false">Adityamarwan</string>
    <string name="agi_setia_putera" translatable="false">Agi Setia Putera</string>
    <string name="wisnu_dwi_yanto" translatable="false">Wisnu Dwi Yanto</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_4_feb">4 Feb</string>
    <string name="ambil_gambar">Ambil Gambar</string>
    <string name="line_type">Line Type</string>
    <string name="quantity">Quantity</string>
    <string name="placeholderString">-</string>
    <string name="last_po">Last PO</string>
    <string name="rab">RAB</string>
    <string name="average_cost">Average Cost</string>
    <string name="detail_material">Detail Material</string>

    <string name="selected">Selected</string>
    <string name="daftar_perusahaan">Daftar Perusahaan</string>
    <string name="nama_supplier">Nama Supplier</string>
    <string name="harga">Harga</string>
    <string name="foto">Foto</string>
    <string name="pilih_supplier">Pilih Supplier</string>
    <string name="masukkan_harga">Masukkan Harga</string>

    <string name="approval_rab">Approval RAB</string>
    <string name="create_rab">Create RAB</string>
    <string name="batal">Batal</string>
    <string name="masukkan_catatan">Masukkan Catatan</string>

    <string name="note_empty_approval">Permintaan RAB baru dari %1$s</string>
    <string name="success">Sukses!</string>
    <string name="rab_telah_dibuat">Permintaan RAB anda telah dibuat! \n Permintaan anda akan segera diproses oleh yang berwewenang!</string>
    <string name="material_telah_dibuat">Tambah material berhasil dilakukan!</string>
    <string name="stock_opname_telah_dibuat">Stock opname berhasil disimpan!</string>

</resources>