<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />

        <item android:id="@+id/nav_usulan"
            android:icon="@drawable/ic_usulan"
            android:title="@string/permintaan_barang"/>

        <item android:id="@+id/nav_po"
            android:icon="@drawable/ic_purchase_order"
            android:title="@string/purchase_order"/>

        <item
            android:id="@+id/nav_gudang"
            android:icon="@drawable/ic_permintaan"
            android:title="@string/permintaan_barang"/>

        <item
            android:id="@+id/nav_opname"
            android:icon="@drawable/ic_stock_opname"
            android:title="@string/stok_opname"/>

    </group>
</menu>