<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tx_title_tanggal_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tanggal_order"
        android:layout_margin="16dp"
        style="@style/TextTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tx_tanggal_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_28_05_2021"
        style="@style/TextSub"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tx_title_tanggal_order" />

    <TextView
        android:id="@+id/tx_title_total_anggaran"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_anggaran"
        style="@style/TextTitle"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tx_total_anggaran"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/rp_3_445_000"
        android:textColor="@color/light_blue"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tx_title_total_anggaran" />

    <TextView
        android:id="@+id/tx_title_nomor_po"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nomor_po"
        style="@style/TextTitle"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tx_tanggal_order" />

    <TextView
        android:id="@+id/tx_nomor_po"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dummy_no_po"
        style="@style/TextSub"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tx_title_nomor_po"
        />

    <TextView
        android:id="@+id/tx_title_judul_pekerjaan"
        android:text="@string/judul_pekerjaan"
        style="@style/TextTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tx_nomor_po"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tx_judul_pekerjaan"
        style="@style/TextSub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/usulan_pengadaan_tabung_oksigen_portabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tx_title_judul_pekerjaan" />

    <TextView
        android:id="@+id/tx_title_nama_vendor"
        android:text="@string/nama_vendor"
        style="@style/TextTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tx_judul_pekerjaan"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tx_nama_vendor"
        android:text="@string/koperasi_sejahtera_kaltim_teluk"
        style="@style/TextSub"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tx_title_nama_vendor"
        android:layout_marginStart="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tx_title_levering"
        android:text="@string/levering"
        style="@style/TextTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tx_nama_vendor"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tx_levering"
        android:text="@string/dummy_levering"
        style="@style/TextSub"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tx_title_levering"
        android:layout_marginStart="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tx_title_status_po"
        android:text="@string/status_po"
        style="@style/TextTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tx_levering"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tx_status_po"
        android:text="@string/complete"
        style="@style/TextSub"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tx_title_status_po"
        android:layout_marginStart="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tx_title_keterlambatan"
        android:text="@string/keterlambatan"
        style="@style/TextTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tx_status_po"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tx_keterlambatan"
        android:text="@string/dummy_keterlambatan"
        style="@style/TextSub"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tx_title_keterlambatan"
        android:layout_marginStart="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tx_detail_usulan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/detail_usulan_npermintaan_barang"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tx_keterlambatan" />

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer_view_container_detail_po_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/tx_detail_usulan">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/shimmer_placeholder" />

            <include layout="@layout/shimmer_placeholder" />

            <include layout="@layout/shimmer_placeholder" />

            <include layout="@layout/shimmer_placeholder" />

        </LinearLayout>

    </com.facebook.shimmer.ShimmerFrameLayout>

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer_view_container_detail_po"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toTopOf="@+id/shimmer_view_container_detail_po_rv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include layout="@layout/shimmer_detail_po_placeholder" />

    </com.facebook.shimmer.ShimmerFrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_item_data_po"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tx_detail_usulan" />

</androidx.constraintlayout.widget.ConstraintLayout>