<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.pjb.immaapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.pjb.immaapp.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.pjb.immaapp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_usulan"
        android:name="com.pjb.immaapp.ui.usulanpermintaanbarang.DetailUsulanFragment"
        android:label="@string/permintaan_barang"
        tools:layout="@layout/fragment_detail_usulan"/>

    <fragment
        android:id="@+id/nav_po"
        android:name="com.pjb.immaapp.ui.purchaseorder.DetailPurchaseOrderFragment"
        android:label="Purchase Order"
        tools:layout="@layout/fragment_detail_po"/>

</navigation>