<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.pjb.immaapp.ui.usulanpermintaanbarang.tambah.usulan.CreateUpbViewModel"/>
        <variable
            name="handler"
            type="com.pjb.immaapp.handler.OnClickHandlerUpbCreate"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/bg_menu"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                style="@style/TextSectionTitle"
                android:text="@string/tambah_usulan_permintaan_barang" />

            <TextView
                android:id="@+id/tx_title_tanggal_dibutuhkan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/tanggal_dibutuhkan" />

            <EditText
                android:id="@+id/edt_tanggal_dibutuhkan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:drawableEnd="@drawable/ic_date"
                android:hint="@string/masukkan_tanggal_dibutuhkan"
                android:inputType="none"
                android:focusable="false"
                android:clickable="true"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tx_title_deskripsi_pekerjaan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/deskripsi_pekerjaan" />

            <EditText
                android:id="@+id/edt_deskripsi_pekerjaan"
                android:layout_width="match_parent"
                android:text="@={viewModel.description}"
                android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/tx_title_catatan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/catatan" />

            <EditText
                android:id="@+id/edt_catatan"
                android:text="@={viewModel.notes}"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp" />

            <TextView
                android:id="@+id/tx_title_criticality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/criticality" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:orientation="horizontal">

                <RadioButton
                    android:onClick="@{(v) -> viewModel.setCritical(1)}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/urgent" />

                <RadioButton
                    android:onClick="@{(v) -> viewModel.setCritical(0)}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/normal" />

            </RadioGroup>

            <TextView
                android:id="@+id/tx_title_tor_kak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:text="@string/tor_kak" />

            <ProgressBar
                android:id="@+id/progress_create_upb"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:max="100"
                android:visibility="gone"
                tools:progress="20" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_pilih_file"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:background="@color/grey"
                    android:text="@string/pilih_file"
                    android:textAllCaps="false"
                    app:backgroundTint="@null" />

                <TextView
                    android:id="@+id/tx_path"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    tools:text="PATH" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btn_upload_file"
            android:onClick="@{(v) -> handler.onClickUpload(v)}"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/bg_simpan_button"
            android:text="@string/simpan"
            android:textAllCaps="false"
            app:backgroundTint="@null" />

    </LinearLayout>

</layout>