<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="10dp"
    android:background="@drawable/bg_search_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/img_icon_item_po"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/bg_icon_red"
        android:padding="10dp"
        android:src="@drawable/ic_time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tx_job_title"
        android:layout_width="175dp"
        android:ellipsize="end"
        android:layout_height="wrap_content"
        android:lines="1"
        android:text="@string/dummy_po"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:layout_marginTop="12dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@+id/img_icon_item_po"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tx_tanggal_permintaan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/_14_oktober_2021"
        android:textColor="@color/grey_3"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/img_icon_item_po"
        app:layout_constraintTop_toBottomOf="@+id/tx_job_title" />

    <TextView
        android:id="@+id/tx_nomor_po"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/dummy_no_po"
        android:textColor="@color/grey_3"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/img_icon_item_po"
        app:layout_constraintTop_toBottomOf="@+id/tx_tanggal_permintaan" />

    <TextView
        android:id="@+id/total_anggaran"
        android:text="@string/total_anggaran"
        android:textSize="12sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/grey_3"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tx_total_anggaran"
        android:text="@string/rp_3_445_000"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/light_blue"
        android:layout_marginEnd="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/total_anggaran" />

</androidx.constraintlayout.widget.ConstraintLayout>