<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/info_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/bg_qr"
            android:layout_margin="16dp"
            android:padding="16dp"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scan_qr_code"
                android:fontFamily="@font/source_sans_pro_semibold"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:maxWidth="200dp"
                android:text="@string/arahkan_qr_code_ke_kamera_anda_nuntuk_data_terbaca_otomatis" />

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_gravity="center|center_vertical"
            android:src="@drawable/ic_qrcode" />

        <Button
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:background="@drawable/bg_btn"
            app:backgroundTint="@null"
            android:text="@string/scan_sekarang"
            android:textAllCaps="false"
            android:layout_width="200dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tx_manual"
            android:text="@string/klik_disini_jika_mengecek_data_secara_manual"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
</layout>